Instantiate Locale with factory method